Updated settings for prettier and logic for create static and files directoryes
